--- a/.github/workflows/test_and_package.yml
+++ b/.github/workflows/test_and_package.yml
@@ -16,16 +16,16 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Lint with .flake8
+    - name: Lint with flake8
       run: |
         pip install flake8
         pip install flake8-html
-        flake8 . --format=html --htmldir=output/flake8
+        flake8 . --format=html --htmldir=flake8
     - name: Upload flake8 results
       uses: actions/upload-artifact@master
       with:
         name: flake8-results
-        path: output/flake8/*
+        path: flake8/*
       # Use always() to always run this step to publish test results when there are test failures
       if: always()
     - name: Test with nose
