--- a/.github/workflows/test_and_package.yml
+++ b/.github/workflows/test_and_package.yml
@@ -16,12 +16,12 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Lint with flake8
-      run: |
         pip install flake8
-        flake8 . --format=html --htmldir=flake8
-    - name: Test with nose
-      run: |
         pip install nose
         pip install coverage
+    - name: Lint with flake8
+      run: |
+        flake8 .
+    - name: Test with nose
+      run: |
         nosetests tests/ --with-coverage --cover-min 85 --cover-package=boto3_batch_utils
