--- a/.github/workflows/test_and_package.yml
+++ b/.github/workflows/test_and_package.yml
@@ -50,6 +50,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
+    - name: Install Dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install sphinx_rtd_theme
     - uses: ammaraskar/sphinx-action@master
       with:
         docs-folder: "docs/"
