--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -5,10 +5,25 @@ on:
       - 'master'
 
 jobs:
-  test:
-
+  linting:
     runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python 3.7
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.7
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install flake8
+      - name: Lint with flake8
+        run: |
+          flake8 .
 
+  test:
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.7
@@ -19,17 +34,14 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install flake8
         pip install nose
         pip install coverage
-    - name: Lint with flake8
-      run: |
-        flake8 .
     - name: Test with nose
       run: |
         nosetests tests/ --with-coverage --cover-min 85 --cover-package=boto3_batch_utils
 
   deploy:
+    needs: [test, linting]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
