--- a/.github/workflows/branches.yml
+++ b/.github/workflows/branches.yml
@@ -7,26 +7,55 @@ on:
       - '!master'   # excludes master
 
 jobs:
-  test:
-
+  linting:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.7
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.7
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install flake8
-        pip install nose
-        pip install coverage
-    - name: Lint with flake8
-      run: |
-        flake8 .
-    - name: Test with nose
-      run: |
-        nosetests tests/ --with-coverage --cover-min 85 --cover-package=boto3_batch_utils
+      - uses: actions/checkout@v2
+      - name: Set up Python 3.7
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.7
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install flake8
+      - name: Lint with flake8
+        run: |
+          flake8 .
+
+  unitTests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python 3.7
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.7
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install nose
+          pip install coverage
+      - name: Test with nose
+        run: |
+          nosetests tests/unit_tests --with-coverage --cover-min 85 --cover-package=boto3_batch_utils
+
+  integrationTests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python 3.7
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.7
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install nose
+          pip install coverage
+      - name: Test with nose
+        run: |
+          nosetests tests/integration_tests --with-coverage --cover-min 85 --cover-package=boto3_batch_utils
