--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           flake8 .
 
-  test:
+  unitTests:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -38,10 +38,28 @@ jobs:
         pip install coverage
     - name: Test with nose
       run: |
-        nosetests tests/ --with-coverage --cover-min 85 --cover-package=boto3_batch_utils
+        nosetests tests/unit_tests --with-coverage --cover-min 85 --cover-package=boto3_batch_utils
+
+  integrationTests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python 3.7
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.7
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install nose
+          pip install coverage
+      - name: Test with nose
+        run: |
+          nosetests tests/integration_tests --with-coverage --cover-min 85 --cover-package=boto3_batch_utils
 
   deploy:
-    needs: [test, linting]
+    needs: [linting, unitTests, integrationTests]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
