--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -53,10 +53,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install nose
-          pip install coverage
       - name: Test with nose
         run: |
-          nosetests tests/integration_tests --with-coverage --cover-min 85 --cover-package=boto3_batch_utils
+          nosetests tests/integration_tests
 
   deploy:
     needs: [linting, unitTests, integrationTests]
