--- a/.github/workflows/branches.yml
+++ b/.github/workflows/branches.yml
@@ -5,7 +5,7 @@ on:
       - '*'         # matches every branch
       - '*/*'       # matches every branch containing a single '/'
       - '!master'   # excludes master
-      - '!docs'     # excludes docs branch
+      - '!gh-pages'     # excludes docs branch
 
 jobs:
   linting:
