--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -43,7 +43,7 @@ jobs:
         curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
         chmod +x ./cc-test-reporter
         ./cc-test-reporter before-build
-        nosetests tests/unit_tests --with-coverage --cover-min 85 --cover-package=boto3_batch_utils --cover-xml-file
+        nosetests tests/unit_tests --with-coverage --cover-min 85 --cover-package=boto3_batch_utils
         ./cc-test-reporter after-build -r "${{ secrets.CC_TEST_REPORTER_ID }}"
 
   integrationTests:
