--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -36,16 +36,9 @@ jobs:
         pip install -r requirements.txt
         pip install nose
         pip install coverage
-    - name: Send report to CodeClimate
+    - name: Test with nose
       run: |
-        export GIT_BRANCH="${GITHUB_REF/refs\/heads\//}"
-        export GIT_COMMIT_SHA="${GITHUB_SHA::8}"
-        curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-        chmod +x ./cc-test-reporter
-        ./cc-test-reporter before-build
         nosetests tests/unit_tests --with-coverage --cover-min 85 --cover-package=boto3_batch_utils
-        ./cc-test-reporter format-coverage .coverage
-        ./cc-test-reporter after-build -r "${{ secrets.CC_TEST_REPORTER_ID }}"
 
   integrationTests:
     runs-on: ubuntu-latest
