--- a/.github/workflows/branches.yml
+++ b/.github/workflows/branches.yml
@@ -60,3 +60,22 @@ jobs:
       - name: Test with nose
         run: |
           nosetests tests/integration_tests
+
+
+  ShouldDeploy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        if: ${GITHUB_REF#refs/tags/} == 'test'
+        run: |
+          echo "Testing: " + ${GITHUB_REF#refs/tags/}
+
+#      - name: Get Source Tag
+#        id: get_source_tag
+#        run: |
+#          echo ::set-output name=SOURCE_TAG::${GITHUB_REF#refs/tags/}
+#      - name: Decision
+#        run: |
+#          echo $SOURCE_TAG
+#        env:
+#          SOURCE_TAG: ${{ steps.branch_name.outputs.SOURCE_TAG }}
