--- a/.github/workflows/branches.yml
+++ b/.github/workflows/branches.yml
@@ -66,7 +66,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Testing Tags
-        if: ${GITHUB_REF#refs/tags/} == 'test'
+        if: ${{ ${GITHUB_REF#refs/tags/} }} == 'test'
         run: |
           echo "Testing: " + ${GITHUB_REF#refs/tags/}
 
