--- a/.github/workflows/branches.yml
+++ b/.github/workflows/branches.yml
@@ -65,17 +65,19 @@ jobs:
   ShouldDeploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Testing Tags
-        if: ${{ ${GITHUB_REF#refs/tags/} }} == 'test'
+      - name: Get Source Tag
+        id: get_source_tag
         run: |
-          echo "Testing: " + ${GITHUB_REF#refs/tags/}
+          echo ::set-output name=SOURCE_TAG::${GITHUB_REF#refs/tags/}
+      - name: Decision
+        run: |
+          echo $SOURCE_TAG
+        env:
+          SOURCE_TAG: ${{ steps.branch_name.outputs.SOURCE_TAG }}
+      - name: Testing Tags
+        if: $SOURCE_TAG == 'test'
+        run: |
+          echo "Testing"
+        env:
+          SOURCE_TAG: ${{ steps.branch_name.outputs.SOURCE_TAG }}
 
-#      - name: Get Source Tag
-#        id: get_source_tag
-#        run: |
-#          echo ::set-output name=SOURCE_TAG::${GITHUB_REF#refs/tags/}
-#      - name: Decision
-#        run: |
-#          echo $SOURCE_TAG
-#        env:
-#          SOURCE_TAG: ${{ steps.branch_name.outputs.SOURCE_TAG }}
