--- a/.github/workflows/branches.yml
+++ b/.github/workflows/branches.yml
@@ -75,7 +75,7 @@ jobs:
         env:
           SOURCE_TAG: ${{ steps.branch_name.outputs.SOURCE_TAG }}
       - name: Testing Tags
-        if: $SOURCE_TAG == 'test'
+        if: ${{ $SOURCE_TAG }} == 'test'
         run: |
           echo "Testing"
         env:
