--- a/.github/workflows/branches.yml
+++ b/.github/workflows/branches.yml
@@ -65,19 +65,14 @@ jobs:
   ShouldDeploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Get Source Tag
-        id: get_source_tag
-        run: |
-          echo ::set-output name=SOURCE_TAG::${GITHUB_REF#refs/tags/}
-      - name: Decision
-        run: |
-          echo $SOURCE_TAG
-        env:
-          SOURCE_TAG: ${{ steps.branch_name.outputs.SOURCE_TAG }}
       - name: Testing Tags
-        if: ${{ $SOURCE_TAG }} == 'test'
+        if: github.ref == 'test'
         run: |
-          echo "Testing"
-        env:
-          SOURCE_TAG: ${{ steps.branch_name.outputs.SOURCE_TAG }}
+          echo "Tag matched"
+          echo github.ref
+      - name: Testing NOT Tags
+        if: github.ref != 'test'
+        run: |
+          echo "Tag NOT matched"
+          echo github.ref
 
