--- a/.github/workflows/branches.yml
+++ b/.github/workflows/branches.yml
@@ -39,9 +39,13 @@ jobs:
           pip install -r requirements.txt
           pip install nose
           pip install coverage
+          pip install codecov
       - name: Test with nose
         run: |
           nosetests tests/unit_tests --with-coverage --cover-min-percentage 85 --cover-package=boto3_batch_utils
+          codecov --token=${{ secrets.GITHUB_TOKEN }}
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
 
   integrationTests:
