--- a/.github/workflows/branches.yml
+++ b/.github/workflows/branches.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Test with nose and coverage
         run: |
           nosetests tests/unit_tests --with-coverage --cover-min-percentage 85 --cover-package=boto3_batch_utils
-          coverage-badge -o resources/coverage.svg
+          coverage-badge -o ../resources/coverage.svg
       - name: Commit files
         run: |
           git config --local user.name "GitHub Action"
