--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -1,12 +1,8 @@
-name: Feature Branch Pipeline
+name: Master Pipeline
 on:
   push:
     branches:
-      - '*'         # matches every branch
-      - '*/*'       # matches every branch containing a single '/'
-      - '!master'   # excludes master
-      - '!develop'   # excludes develop
-      - '!gh-pages'     # excludes docs branch
+      - 'develop'
 
 jobs:
   linting:
