--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -24,6 +24,9 @@ jobs:
 
   unitTests:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python: [2.7, 3.7, 3.8]
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python 3.7
